added deploy scripts

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="<%= htmlWebpackPlugin.options.metaDesc %>" />
+    <meta
+      name="description"
+      content="<%= htmlWebpackPlugin.options.metaDesc %>"
+    />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
@@ -12,7 +15,9 @@
     <div class="container">
       <div id="add-item" class="add-item">
         <input type="text" placeholder="Add Item..." id="item-text" />
-        <button class="add" id="add-item-list"><i class="fas fa-plus-circle"></i></button>
+        <button class="add" id="add-item-list">
+          <i class="fas fa-plus"></i>
+        </button>
       </div>
       <div id="messages"></div>
     </div>
